Replacing all email addresses

--- a/about/index.html
+++ b/about/index.html
@@ -460,7 +460,7 @@
 
 <footer class="site-footer">
 
-  <div class="site-info u-inconsolata u-uppercase">Mail: <a href="mailto:actualfriction@gmail.com" class="strike">actualfriction@gmail.com</a></div>
+  <div class="site-info u-inconsolata u-uppercase">Mail: <a href="mailto:me@fonix.online" class="strike">me@fonix.online</a></div>
 
   <div class="effect-toggle hidden-small">
     <span><i class="fa fa-toggle-on"></i></span>
