--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body class="loader">
 	<header class="site-header">
 		<div class="site-border site-border--top"></div>
-		<div class="site-border site-border--bottom"></div><a class="site-logo from-page" href="index.html">
+		<div class="site-border site-border--bottom"></div><a class="site-logo from-page" href="#">
 		<div class="site-logo__mask"><img alt="Fonix Hardcastle" class="site-logo__sprites" srcset="includes/logo.png"></div></a>
 		<div class="hamburger u-inconsolata">
 			<span class="hamburger--info">Open Main Menu</span> <span class="hamburger-bun hamburger-bun--top"></span> <span class="hamburger-patty"></span> <span class="hamburger-bun hamburger-bun--btm"></span>
@@ -38,12 +38,6 @@
 					<ul class="menu" id="menu-main-menu">
 						<li class="current-menu-item">
 							<a class="from-page" href="index.html" title="Projects">Homepage</a>
-						</li>
-						<li class="from-page menu-item menu-item-type-post_type menu-item-object-page menu-item-329" id="menu-item-329">
-							<a href="http://music.neobyte-network.net">Music</a>
-						</li>
-						<li class="from-page menu-item menu-item-type-post_type menu-item-object-page menu-item-328" id="menu-item-328">
-							<a href="http://dhmini.xyz">URL Shortner</a>
 						</li>
 						<li class="from-page menu-item menu-item-type-post_type menu-item-object-page menu-item-327" id="menu-item-327">
 							<a href="http://github.com/thefonix">My Github</a>
@@ -106,24 +100,6 @@
 		<div class="project-hamburger u-inconsolata">
 			<span class="project-hamburger--info">File Access</span> <span class="project-hamburger--closed"><i class="fa fa-folder-o"></i></span> <span class="project-hamburger--open"><i class="fa fa-folder-open-o"></i></span>
 		</div>
-		<nav class="project-nav u-inconsolata u-textRight">
-			<ul class="project-nav__menu">
-				<li class="project-nav__item">
-					<a class="from-front" href="https://cloud.fonix.online">Fonix Cloud<br>
-					<i class="fa fa-long-arrow-right"></i></a>
-				</li>
-				<li class="project-nav__item">
-					<a class="from-front" href="https://cloud.digitalhazards.net">DH Cloud<br>
-					<i class="fa fa-long-arrow-right"></i></a>
-				</li>
-				<li class="project-nav__item">
-					<a class="from-front" href="https://apt.fonix.online">APT Repo<i class="fa fa-long-arrow-right"></i></a>
-				</li>
-				<li class="project-nav__item">
-					<a class="from-front" href="projects">Projects<i class="fa fa-long-arrow-right"></i></a>
-				</li>
-			</ul>
-		</nav>
 		<div class="slider slider--blurred">
 			<div class="slider__slide" id="slide-1">
 				<div class="slide-content">
@@ -131,7 +107,7 @@
 					<h2 class="slide-content__title u-uppercase"><span><a class="from-front" href="https://fonix.online">Fonix<br>
 					Hardcastle</a></span></h2>
 					<ul class="slide-meta">
-						<li class="slide-meta__item"><span class="slide-meta__title u-inconsolata">Services</span><span class="slide-meta__value">Software Engineer, Student Developer</span></li>
+						<li class="slide-meta__item"><span class="slide-meta__title u-inconsolata">Services</span><span class="slide-meta__value">Software Engineer, Web Designer</span></li>
 						<li class="slide-meta__item"><span class="slide-meta__title u-inconsolata">Education</span><span class="slide-meta__value">Godalming College</span></li>
 						<li class="slide-meta__item"><span class="slide-meta__title u-inconsolata">Age</span><span class="slide-meta__value">18</span></li>
 						<li class="slide-meta__item"><span class="slide-meta__title u-inconsolata">Profession</span><span class="slide-meta__value">Student Developer</span></li>
