--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
 <body class="loader">
 	<header class="site-header">
 		<div class="site-border site-border--top"></div>
-		<div class="site-border site-border--bottom"></div><a class="site-logo from-page" href="../index.html">
+		<div class="site-border site-border--bottom"></div><a class="site-logo from-page" href="../">
 		<div class="site-logo__mask"><img alt="Fonix Hardcastle" class="site-logo__sprites" srcset="../includes/logo.png"></div></a>
 	</header>
 	<main class="site-wrapper blurred">
@@ -61,25 +61,25 @@
 												<li class="cv__timespan u-inconsolata">2014 - Present</li>
 												<li class="cv__milestone">Freelancer Visual Design <span class="u-playfair">&amp;</span> Web Development</li>
 											</ul>
-											<ul class="cv__item">
-												<li class="cv__timespan u-inconsolata">2014 - 2015</li>
+                      <ul class="cv__item">
+                        <li class="cv__timespan u-inconsolata">2017 - 2017</li>
+                        <li class="cv__milestone">Classroom Teaching</li>
+                        <li>
+                          <ul class="cv__detail">
+                            <li>Basics of JS</li>
+                            <li>Intergrating CSS</li>
+                            <li>Backend PHP</li>
+                          </ul>
+                        </li>
+                      </ul>
+                      <ul class="cv__item">
+												<li class="cv__timespan u-inconsolata">2015 - 2016</li>
 												<li class="cv__milestone">Visual Security Systems</li>
 												<li>
 													<ul class="cv__detail">
 														<li>CCTV Engineering</li>
 														<li>Network imagery</li>
 														<li>Bandwidth Control</li>
-													</ul>
-												</li>
-											</ul>
-											<ul class="cv__item">
-												<li class="cv__timespan u-inconsolata">2017 - 2017</li>
-												<li class="cv__milestone">Classroom Teaching</li>
-												<li>
-													<ul class="cv__detail">
-														<li>Basics of JS</li>
-														<li>Intergrating CSS</li>
-														<li>Backend PHP</li>
 													</ul>
 												</li>
 											</ul>
@@ -122,7 +122,7 @@
 										<div class="cv__list">
 											<h4 class="module__subtitle"><i class="fa fa-graduation-cap"></i>Educational</h4>
 											<ul class="cv__item">
-												<li class="cv__timespan u-inconsolata">2015 - Present</li>
+												<li class="cv__timespan u-inconsolata">2016 - Present</li>
 												<li class="cv__milestone">Godalming College</li>
 												<li>
 													<ul class="cv__detail">
@@ -131,7 +131,18 @@
 													</ul>
 												</li>
 											</ul>
-											<ul class="cv__item">
+                      <ul class="cv__item">
+												<li class="cv__timespan u-inconsolata">2015 - 2016</li>
+												<li class="cv__milestone">NCS Citizen Service</li>
+												<li>
+													<ul class="cv__detail">
+														<li>Public Aid</li>
+														<li>Project Develpment</li>
+														<li>Team Building</li>
+													</ul>
+												</li>
+											</ul>
+                      <ul class="cv__item">
 												<li class="cv__timespan u-inconsolata">2014 - 2015</li>
 												<li class="cv__milestone">ACM (Academy of Contemporary Music)</li>
 												<li>
@@ -140,17 +151,6 @@
 														<li>Audio Recording (Diploma)</li>
 														<li>Stage Rigging (Diploma)</li>
 														<li>Audio In a Performance Environment (Diploma)</li>
-													</ul>
-												</li>
-											</ul>
-											<ul class="cv__item">
-												<li class="cv__timespan u-inconsolata">2015 - 2016</li>
-												<li class="cv__milestone">NCS Citizen Service</li>
-												<li>
-													<ul class="cv__detail">
-														<li>Public Aid</li>
-														<li>Project Develpment</li>
-														<li>Team Building</li>
 													</ul>
 												</li>
 											</ul>
@@ -223,6 +223,28 @@
 									</li>
 								</ul>
 							</div>
+              <div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
+                <ul class="cv__item">
+                  <li class="cv__timespan u-inconsolata">Home Automation!</li>
+                  <li class="cv__milestone">Who Likes A Dumb Home?</li>
+                  <li>
+                    <ul class="cv__detail">
+                      <li>Small Scale</li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+              <div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
+                <ul class="cv__item">
+                  <li class="cv__timespan u-inconsolata">MQTT Geek</li>
+                  <li class="cv__milestone">My Stepping Stone to Home Automation!</li>
+                  <li>
+                    <ul class="cv__detail">
+                      <li>Small Scale</li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
 							<div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
 								<ul class="cv__item">
 									<li class="cv__timespan u-inconsolata">Scripting</li>
@@ -245,6 +267,17 @@
 									</li>
 								</ul>
 							</div>
+              <div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
+                <ul class="cv__item">
+                  <li class="cv__timespan u-inconsolata">Theming</li>
+                  <li class="cv__milestone">Pterodactyl</li>
+                  <li>
+                    <ul class="cv__detail">
+                      <li>How Admin Panels Are Meant To Look</li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
 							<div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
 								<ul class="cv__item">
 									<li class="cv__timespan u-inconsolata">Network Administrator</li>
@@ -255,6 +288,8 @@
 										</ul>
 									</li>
 								</ul>
+                </div>
+                <div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
 								<ul class="cv__item">
 									<li class="cv__timespan u-inconsolata">Systems Operator</li>
 									<li class="cv__milestone">Digital Hazards</li>
