Added discord link!

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 						<li class="from-page menu-item menu-item-type-post_type menu-item-object-page menu-item-327" id="menu-item-327">
 							<a href="https://vpn.fonix.online">My VPN Service</a>
 						</li>
+						<li class="from-page menu-item menu-item-type-post_type menu-item-object-page menu-item-327" id="menu-item-327">
+							<a href="https://fonix.online/discord">My Discord</a>
+						</li>
 					</ul>
 				</div>
 			</div>
