--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<title>Fonix Hardcastle</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400" rel="stylesheet" type="text/css">
@@ -152,6 +151,8 @@
 		</div>
 	</footer>
 	<script src='assets/themes/fonix/js/main.js?ver=1.0' type='text/javascript'>
+	</script>
+	<script src='assets/themes/fonix/js/immaslide.js' type='text/javascript'>
 	</script>
 	<script src='includes/js/wp-embed.min.js?ver=4.6.1' type='text/javascript'>
 	</script><!-- Localized -->
