More updates to content!

--- a/about/index.html
+++ b/about/index.html
@@ -73,7 +73,7 @@
                       </ul>
                       <ul class="cv__item">
 												<li class="cv__timespan u-inconsolata">2015 - 2016</li>
-												<li class="cv__milestone">Visual Security Systems</li>
+												<li class="cv__milestone">Visual Security Systems </li>
 												<li>
 													<ul class="cv__detail">
 														<li>CCTV Engineering</li>
@@ -89,6 +89,7 @@
 													<ul class="cv__detail">
 														<li>HTML</li>
 														<li>CSS</li>
+														<li>JS</li>
 														<li>Design Tools <span class="u-playfair">&amp;</span> HTML5, CSS3</li>
 													</ul>
 												</li>
@@ -101,6 +102,7 @@
 														<li>Audio Engineering</li>
 														<li>Lighting Technician</li>
 														<li>AV Operator</li>
+														<li>BackStage Management</li>
 													</ul>
 												</li>
 											</ul>
@@ -146,10 +148,10 @@
 												<li class="cv__milestone">ACM (Academy of Contemporary Music)</li>
 												<li>
 													<ul class="cv__detail">
-														<li>Audio Production (Dimploma, Btec Lvl 1,2,3)</li>
-														<li>Audio Recording (Diploma)</li>
-														<li>Stage Rigging (Diploma)</li>
-														<li>Audio In a Performance Environment (Diploma)</li>
+														<li>Audio Production (A Level)</li>
+														<li>Audio Recording (A Level)</li>
+														<li>Stage Rigging (A Level)</li>
+														<li>Audio In a Performance Environment (A Level)</li>
 													</ul>
 												</li>
 											</ul>
@@ -179,9 +181,11 @@
 									<ul class="exp__list">
 										<li><span class="ninety"></span>Load Balancing</li>
 										<li><span class="hundred"></span>Bash / Scripting</li>
-										<li><span class="eighty"></span>Basic Firewalling</li>
+										<li><span class="hundred"></span>Redis Engineering</li>
+										<li><span class="eighty"></span>Network Firewalling</li>
 										<li><span class="eighty"></span>Virtualization Management</li>
 										<li><span class="ninety"></span>Systems Analysis</li>
+										<li><span class="eighty"></span>Docker Administration</li>
 									</ul>
 								</div>
 								<div class="exp__module">
@@ -246,6 +250,17 @@
               </div>
 							<div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
 								<ul class="cv__item">
+									<li class="cv__timespan u-inconsolata">Redis Engineering</li>
+									<li class="cv__milestone">Every noticed how it links to MQTT?</li>
+									<li>
+										<ul class="cv__detail">
+											<li>Network Based</li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
+								<ul class="cv__item">
 									<li class="cv__timespan u-inconsolata">Scripting</li>
 									<li class="cv__milestone">Alexa Skill Designing</li>
 									<li>
@@ -294,7 +309,7 @@
 									<li class="cv__milestone">Digital Hazards</li>
 									<li>
 										<ul class="cv__detail">
-											<li>A Current CEO</li>
+											<li>A Current Systems Admin</li>
 										</ul>
 									</li>
 								</ul>
