--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<title>About Me!</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400" rel="stylesheet" type="text/css">
@@ -73,7 +74,7 @@
                       </ul>
                       <ul class="cv__item">
 												<li class="cv__timespan u-inconsolata">2015 - 2016</li>
-												<li class="cv__milestone">Visual Security Systems </li>
+												<li class="cv__milestone">Visual Security Systems</li>
 												<li>
 													<ul class="cv__detail">
 														<li>CCTV Engineering</li>
@@ -89,7 +90,6 @@
 													<ul class="cv__detail">
 														<li>HTML</li>
 														<li>CSS</li>
-														<li>JS</li>
 														<li>Design Tools <span class="u-playfair">&amp;</span> HTML5, CSS3</li>
 													</ul>
 												</li>
@@ -102,7 +102,6 @@
 														<li>Audio Engineering</li>
 														<li>Lighting Technician</li>
 														<li>AV Operator</li>
-														<li>BackStage Management</li>
 													</ul>
 												</li>
 											</ul>
@@ -148,10 +147,10 @@
 												<li class="cv__milestone">ACM (Academy of Contemporary Music)</li>
 												<li>
 													<ul class="cv__detail">
-														<li>Audio Production (A Level)</li>
-														<li>Audio Recording (A Level)</li>
-														<li>Stage Rigging (A Level)</li>
-														<li>Audio In a Performance Environment (A Level)</li>
+														<li>Audio Production (Dimploma, Btec Lvl 1,2,3)</li>
+														<li>Audio Recording (Diploma)</li>
+														<li>Stage Rigging (Diploma)</li>
+														<li>Audio In a Performance Environment (Diploma)</li>
 													</ul>
 												</li>
 											</ul>
@@ -181,11 +180,9 @@
 									<ul class="exp__list">
 										<li><span class="ninety"></span>Load Balancing</li>
 										<li><span class="hundred"></span>Bash / Scripting</li>
-										<li><span class="hundred"></span>Redis Engineering</li>
-										<li><span class="eighty"></span>Network Firewalling</li>
+										<li><span class="eighty"></span>Basic Firewalling</li>
 										<li><span class="eighty"></span>Virtualization Management</li>
 										<li><span class="ninety"></span>Systems Analysis</li>
-										<li><span class="eighty"></span>Docker Administration</li>
 									</ul>
 								</div>
 								<div class="exp__module">
@@ -250,17 +247,6 @@
               </div>
 							<div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
 								<ul class="cv__item">
-									<li class="cv__timespan u-inconsolata">Redis Engineering</li>
-									<li class="cv__milestone">Every noticed how it links to MQTT?</li>
-									<li>
-										<ul class="cv__detail">
-											<li>Network Based</li>
-										</ul>
-									</li>
-								</ul>
-							</div>
-							<div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
-								<ul class="cv__item">
 									<li class="cv__timespan u-inconsolata">Scripting</li>
 									<li class="cv__milestone">Alexa Skill Designing</li>
 									<li>
@@ -309,7 +295,7 @@
 									<li class="cv__milestone">Digital Hazards</li>
 									<li>
 										<ul class="cv__detail">
-											<li>A Current Systems Admin</li>
+											<li>A Previous CEO</li>
 										</ul>
 									</li>
 								</ul>
@@ -332,6 +318,17 @@
 									<li>
 										<ul class="cv__detail">
 											<li>Lots Of Cool Stuff!</li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="grid__col grid__col--md-3 grid__col--sm-3 grid__col--xs-6">
+								<ul class="cv__item">
+									<li class="cv__timespan u-inconsolata">Systems Administrator</li>
+									<li class="cv__milestone">Corinth Entertainment</li>
+									<li>
+										<ul class="cv__detail">
+											<li>There to help!</li>
 										</ul>
 									</li>
 								</ul>
@@ -376,8 +373,6 @@
 		</div>
 	</footer>
 	<script src='../assets/themes/fonix/js/main.js?ver=1.0' type='text/javascript'>
-	</script>
-	<script src='../assets/themes/fonix/js/immaslideabout.js' type='text/javascript'>
 	</script>
 	<script src='../includes/js/wp-embed.min.js?ver=4.6.1' type='text/javascript'>
 	</script><!-- Localized -->
