--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<a href="http://soundcloud.com/thefonix">My Soundcloud</a>
 						</li>
 						<li class="from-page menu-item menu-item-type-post_type menu-item-object-page menu-item-327" id="menu-item-327">
-							<a href="https://vpn.fonix.online">My VPN Service</a>
+							<a href="https://docs.fonix.online">Documentation</a>
 						</li>
 						<li class="from-page menu-item menu-item-type-post_type menu-item-object-page menu-item-327" id="menu-item-327">
 							<a href="https://fonix.online/discord">My Discord</a>
